--- a/assets/css/sass/product.scss
+++ b/assets/css/sass/product.scss
@@ -7,6 +7,10 @@
   .container {
     display: flex;
     justify-content: space-between;
+    @media (min-width: 1200px) and (max-width: 1400px) {
+      display: inline-flex;
+      padding-left: 30px;
+   }
     .fz_product_left {
       display: flex;
       flex-direction: column;
@@ -81,7 +85,7 @@
 
           .fz_subtitle {
             font-size: 12px;
-            font-weight: 200;
+            font-weight: 300;
             line-height: 26px;
             color: #f8d796;
             border: 1px solid #f7c35f3b;
@@ -181,6 +185,16 @@
           svg {
             width: 100%;
             height: 100%;
+          }
+          @media (min-width: 992px) and (max-width: 1400px) {
+            .finbankz-product svg{
+              width:80% !important;
+              margin-left: 30px;
+         }
+            .finlyticz-product svg{
+                 width:80% !important;
+                 margin-left: 40px;
+            }
           }
         }
       }
